--- a/platformio.ini
+++ b/platformio.ini
@@ -13,3 +13,4 @@ platform = espressif32
 board = freenove_esp32_s3_wroom
 framework = espidf
 monitor_speed = 115200
+monitor_filters = colorize, time, esp32_exception_decode
